--- a/test-cases/index1.html
+++ b/test-cases/index1.html
@@ -17,7 +17,7 @@
 
 <body>
     <h1>Text colors</h1>
-    <div class="wd-99 clr-white bg-black">white</div>
+    <div class="wd-px-99 clr-white bg-black">white</div>
     <div class="clr-black">black</div>
     <div class="clr-grey">grey</div>
     <div class="clr-silver">silver</div>
